6_resilience/deployment-retry/vs-fault-99pct-leaf2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: leaf2-vs
spec:
  hosts:
    - leaf2
  http:
  - fault:
      abort:
        percentage:
          value: 99
        httpStatus: 500
    route:
    - destination:
        host: leaf2
        port:
          number: 8080
